Update spaCy tutorial with Chinese language support

--- a/spaCy0.ipynb
+++ b/spaCy0.ipynb
@@ -16,19 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy\n",
     "\n",
     "# 加载中文模型\n",
-    "nlp = spacy.load(\"zh_core_web_sm\")"
+    "nlp = spacy.load(\"zh_core_web_md\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +51,31 @@
     "# 遍历doc实例中的词符\n",
     "for token in doc:\n",
     "    print(token.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "宠物 NOUN nmod:assmod\n",
+      "的 PART case\n",
+      "家 NOUN nsubj\n",
+      "在 VERB dep\n",
+      "哪 PRON dobj\n",
+      "啊 PART discourse\n",
+      "？ PUNCT ROOT\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(u'宠物的家在哪啊？')\n",
+    "for token in doc:\n",
+    "    print(token.text, token.pos_, token.dep_)"
    ]
   },
   {
